force-app/main/default/objects/KS_Unit__c/KS_Unit__c.object-meta.xml
<CustomObject>
    <description>Custom object to hold the unit details</description>
    <label>Unit</label>
    <nameField>
        <label>Unit Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Units</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>