force-app/main/default/objects/KS_Unit__c/fields/KS_Code__c.field-meta.xml
<CustomField>
    <fullName>KS_Code__c</fullName>
    <label>Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>