force-app/main/default/objects/KS_Unit__c/fields/KS_Description__c.field-meta.xml
<CustomField>
    <fullName>KS_Description__c</fullName>
    <description>A detailed description of the unit.</description>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>