force-app/main/default/objects/KS_Unit__c/fields/KS_Features__c.field-meta.xml
<CustomField>
    <fullName>KS_Features__c</fullName>
    <label>Features</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Balcony</fullName>
            </value>
            <value>
                <fullName>Garden</fullName>
            </value>
            <value>
                <fullName>Ground Floor</fullName>
            </value>
            <value>
                <fullName>Elevator</fullName>
            </value>
            <value>
                <fullName>Premium Finishes</fullName>
            </value>
            <value>
                <fullName>Parking</fullName>
            </value>
            <value>
                <fullName>Storage</fullName>
            </value>
            <value>
                <fullName>Roof Terrace</fullName>
            </value>
            <value>
                <fullName>Panoramic View</fullName>
            </value>
            <value>
                <fullName>Terrace</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>