force-app/main/default/objects/KS_Unit__c/fields/KS_Floor__c.field-meta.xml
<CustomField>
    <fullName>KS_Floor__c</fullName>
    <label>Floor</label>
    <length>50</length>
    <type>Text</type>
</CustomField>