force-app/main/default/objects/KS_Unit__c/fields/KS_Images__c.field-meta.xml
<CustomField>
    <fullName>KS_Images__c</fullName>
    <label>Images</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>