force-app/main/default/objects/KS_Unit__c/fields/KS_Interested__c.field-meta.xml
<CustomField>
    <fullName>KS_Interested__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The interested party associated with this unit.</description>
    <label>Interested</label>
    <referenceTo>KS_InterestedParties__c</referenceTo>
    <relationshipLabel>Units</relationshipLabel>
    <relationshipName>InterestedParties</relationshipName>
    <type>Lookup</type>
</CustomField>