force-app/main/default/objects/KS_Unit__c/fields/KS_InteriorQuality__c.field-meta.xml
<CustomField>
    <fullName>KS_InteriorQuality__c</fullName>
    <description>The quality level of the interior finishes and materials used in the unit.</description>
    <label>Interior Quality</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Basic</fullName>
            </value>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>Premium</fullName>
            </value>
            <value>
                <fullName>Luxury</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>