force-app/main/default/objects/KS_Unit__c/fields/KS_NumberOfBaths__c.field-meta.xml
<CustomField>
    <fullName>KS_NumberOfBaths__c</fullName>
    <description>The number of bathrooms in the unit.</description>
    <label>No of Baths</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>