force-app/main/default/objects/KS_Unit__c/fields/KS_NumberOfRooms__c.field-meta.xml
<CustomField>
    <fullName>KS_NumberOfRooms__c</fullName>
    <description>The number of rooms in the unit.</description>
    <label>No. Of Rooms</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>