force-app/main/default/objects/KS_Unit__c/fields/KS_ParkingCost__c.field-meta.xml
<CustomField>
    <fullName>KS_ParkingCost__c</fullName>
    <label>Parking Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>