force-app/main/default/objects/KS_Unit__c/fields/KS_Price__c.field-meta.xml
<CustomField>
    <fullName>KS_Price__c</fullName>
    <description>The price of the unit.</description>
    <label>Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>