force-app/main/default/objects/KS_Unit__c/fields/KS_Project__c.field-meta.xml
<CustomField>
    <fullName>KS_Project__c</fullName>
    <description>Custom field to capture the relationship between the unit and the project - if one exists</description>
    <label>Project</label>
    <referenceTo>KS_Project__c</referenceTo>
    <relationshipLabel>Units</relationshipLabel>
    <relationshipName>Units</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>