force-app/main/default/objects/KS_Unit__c/fields/KS_Status__c.field-meta.xml
<CustomField>
    <fullName>KS_Status__c</fullName>
    <description>The current status of the unit.</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Construction Not Started</fullName>
            </value>
            <value>
                <fullName>In Development</fullName>
            </value>
            <value>
                <fullName>Finalised</fullName>
            </value>
            <value>
                <fullName>Paused</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>