force-app/main/default/objects/KS_Unit__c/fields/KS_Title__c.field-meta.xml
<CustomField>
    <fullName>KS_Title__c</fullName>
    <label>Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>