force-app/main/default/objects/KS_Unit__c/fields/KS_Type__c.field-meta.xml
<CustomField>
    <fullName>KS_Type__c</fullName>
    <description>The type of unit, such as apartment, house, or commercial property.</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Apartment</fullName>
            </value>
            <value>
                <fullName>House</fullName>
            </value>
            <value>
                <fullName>Commercial</fullName>
            </value>
            <value>
                <fullName>Studio</fullName>
            </value>
            <value>
                <fullName>Penthouse</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>